--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Vigneshwar Blog"
+title                    : "Vigneshwar's Blog"
 title_separator          : "-"
 name                     : "Vigneshwar Venkatachalapathi"
-description              : "Official Blog."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+description              : "Personal Blog site of Vigneshwar Venkatachalapathi"
+url                      : "https://vickys-wiki.github.io"
+baseurl                  : "/blog"
+repository               : "vickys-wiki/vickys-wiki.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
