--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Vigneshwar's Blog"
-title_separator          : "-"
-name                     : "Vigneshwar Venkatachalapathi"
+title                    : 
+title_separator          : 
+name                     : "Vigneshwar V"
 description              : "Blog site of Vigneshwar Venkatachalapathi"
 url                      : "https://vickys-wiki.github.io"
 baseurl                  : "/blog"
@@ -51,8 +51,11 @@ og_image                 : # Open Graph/Twitter default site image
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
-
+  links: 
+     - "https://twitter.com/vickys_wiki"
+     - "https://facebook.com/vickypathi"
+     - "https://www.linkedin.com/in/vickypathi"
+     - "https://github.com/vickys-wiki"
 # Analytics
 analytics:
   provider               : false # false (default), "google", "google-universal", "custom"
@@ -62,30 +65,30 @@ analytics:
 
 # Site Author
 author:
-  name             : "Vigneshwar Venkatachalapathi"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Chennai, India"
-  email            :
-  uri              :
+  name             : "Vigneshwar"
+  avatar           : "/assets/images/profile_pic.jpg"
+  bio              : "A full-stack web developer by work.A problem solver by nature.A constant learner by will."
+  location         : "Chennai, India" 
+  email            : 
+  uri              : 
   bitbucket        :
-  codepen          :
+  codepen          : # "http://codepen.io/vickys-wiki/"
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "https://facebook.com/vickypathi"
   foursquare       :
-  github           :
+  github           : "https://github.com/vickys-wiki"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "https://linkedin.com/in/vickypathi"
   pinterest        :
-  soundcloud       :
+  soundcloud       : #"https://soundcloud.com/vigneshwar-venkatachalapathi"
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : "https://twitter.com/vickys_wiki"
   vine             :
   weibo            :
   xing             :
