--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 # main links
 main:
-  - title: "Posts"
-    url: /year-archive/
+  - title: "Index"
+    url: /blogIndex/
   - title: "Categories"
     url: /categories/
+  - title: "Posts"
+    url: /posts/
   - title: "Tags"
     url: /tags/
   #- title: "Sample Collections"
