--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          :
 name                     : "Vigneshwar V"
 description              : "Blog site of Vigneshwar Venkatachalapathi"
 url                      : "https://vickys-wiki.github.io"
-baseurl                  : ""
+baseurl                  : "/blog"
 repository               : "vickys-wiki/vickys-wiki.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
@@ -159,7 +159,7 @@ sass:
 
 
 # Outputting
-permalink: /blog/:categories/:title/
+permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
