--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://linkedin.com/in/vickypathi"
+  linkedin         : "vickypathi"
   pinterest        :
   soundcloud       : #"https://soundcloud.com/vigneshwar-venkatachalapathi"
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
