--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en"
 title                    : "The Moral Panda"
 title_separator          : "-"
 name                     : "Vigneshwar V"
-description              : "Blog site of Vigneshwar Venkatachalapathi"
+description              : "Personal site of Vigneshwar Venkatachalapathi. Software Engineer, Blogger, Problem Solver, Creationist."
 url                      : "https://themoralpanda.github.io"
 baseurl                  : ""
 repository               : "TheMoralPanda/themoralpanda.github.io"
