--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ facebook:
   username               :  "TheMoralPanda"
   app_id                 :
   publisher              :
-og_image                 : # Open Graph/Twitter default site image
+#og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
