--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@
 locale                   : "en"
 title                    : "Vig Venkat"
 title_separator          : "-"
+theme: minimal-mistakes-jekyll
 minimal_mistakes_skin    : dark
 name                     : "Vig Venkat"
 description              : "Personal site of Vigneshwar Venkatachalapathi. Software Engineer, Blogger, Problem Solver, Creationist."
