--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,11 @@
 locale                   : "en"
 title                    : "Vig Venkat"
 title_separator          : "-"
-theme: minimal-mistakes-jekyll
 minimal_mistakes_skin    : dark
 name                     : "Vig Venkat"
 description              : "Personal site of Vigneshwar Venkatachalapathi. Software Engineer, Blogger, Problem Solver, Creationist."
 url                      : "https://themoralpanda.github.io"
-baseurl                  : "/"
+baseurl                  : ""
 repository               : "TheMoralPanda/themoralpanda.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
