--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ locale                   : "en"
 title                    : "Vig Venkat"
 title_separator          : "-"
 minimal_mistakes_skin    : dark
+theme                    : "minimal-mistakes-jekyll"
 name                     : "Vig Venkat"
 description              : "Personal site of Vigneshwar Venkatachalapathi. Software Engineer, Blogger, Problem Solver, Creationist."
 url                      : "https://themoralpanda.github.io"
